2008-06-20  Dan Williams  <dcbw@redhat.com>

	Update for VPN UI plugin API changes

	* src/connection-editor/page-vpn.c
		- (ce_page_vpn_new): connect to 'changed' instead of 'validity-changed'
		- (validate): nm_vpn_plugin_ui_widget_interface_update_connection()
			now returns validity

2008-06-20  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): fix adding CDMA connections

2008-06-20  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/ce-page.c
	src/connection-editor/ce-page.h
	src/connection-editor/nm-connection-editor.c
	src/connection-editor/nm-connection-editor.h
	src/connection-editor/nm-connection-list.c
	src/connection-editor/page-dsl.c
	src/connection-editor/page-ip4.c
	src/connection-editor/page-mobile.c
	src/connection-editor/page-ppp.c
	src/connection-editor/page-vpn.c
	src/connection-editor/page-wired-security.c
	src/connection-editor/page-wired.c
	src/connection-editor/page-wireless-security.c
	src/connection-editor/page-wireless-security.h
	src/connection-editor/page-wireless.c

	Use a copy of the real connection in the connection editor. Fixes issues
	where the connection is updated but writing it fails for some reason.
	Keep the connection that's been edited updated after every UI change so
	that pages can act on changes to other pages.

2008-06-17  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/*
		- Remove, no longer used

	* src/connection-editor/Makefile.am
	  src/connection-editor/ce-vpn-wizard.glade
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.glade
	  src/connection-editor/nm-connection-list.c
	  src/connection-editor/page-vpn.c
	  src/connection-editor/page-vpn.h
	  src/connection-editor/vpn-helpers.c
	  src/connection-editor/vpn-helpers.h
		- Add VPN editing functionality to the connection editor using the
			new GNOME VPN UI plugin API

2008-06-11  Dan Williams  <dcbw@redhat.com>
